# college_essay

./: README.md  activities.md  activity.json  activity.txt  answers-Film.md  answers-mathematics.md  answers-singing.md  answers.md  answers_old.md  essay-Singing1.md  essay-Singing2.md  essay-Singing3..md  essay-business.md  essay-film2.md  essay-film3.md  essay-film4.md  essay-film5.md  essay-singing.md  essay-v1.md  essay.md  essay1.md  essay_film.md  essay_without-critique.md  pyproject.toml  questions.md
src/college_essay/: __init__.py  crew.py  main.py
src/college_essay/config/: agents.yaml  tasks.yaml
src/college_essay/service/rest/fastapi/: call_crew_run.py  crew_run_fast_api.py
src/college_essay/tools/: gorilla_tool.py
