[tool.poetry]
name = "college_essay"
version = "0.1.0"
description = "college-essay using crewAI"
authors = ["Albert Pinto <albertpinto123@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
college_essay = "college_essay.main:run"
run_crew = "college_essay.main:run"
train = "college_essay.main:train"
replay = "college_essay.main:replay"
test = "college_essay.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
